# nanoGCG

./: .gitignore  CONSTRAINED_GCG_GUIDE.md  pyproject.toml
examples/: constrained_gcg_example.py  test_full_evaluation.py
nanogcg/: __init__.py  constrained_gcg.py  gcg.py  preprocess_allowable_strings.py
